--- a/app/views/signin.hbs
+++ b/app/views/signin.hbs
@@ -7,8 +7,8 @@
  
 <body>
     <form id="signin" name="signin" method="post" action="signin">
-        <label for="email">Email Address</label>
-        <input class="text" name="email" type="text" />
+        <label for="username">User Name</label>
+        <input class="text" name="username" type="text" />
         <label for="password">Password</label>
         <input name="password" type="password" />
         <input class="btn" type="submit" value="Sign In" />
