--- a/app/views/signup.hbs
+++ b/app/views/signup.hbs
@@ -7,12 +7,12 @@
  
 <body>
     <form id="signup" name="signup" method="post" action="/signup">
-        <label for="email">Email Address</label>
-        <input class="text" name="email" type="email" />
-        <label for="firstname">Firstname</label>
+        <label for="username">Username</label>
+        <input class="text" name="username" type="username" />
+        {{!-- <label for="firstname">Firstname</label>
         <input name="firstname" type="text" />
         <label for="lastname">Lastname</label>
-        <input name="lastname" type="text" />
+        <input name="lastname" type="text" /> --}}
         <label for="password">Password</label>
         <input name="password" type="password" />
         <input class="btn" type="submit" value="Sign Up" />
