--- a/app/views/dashboard.hbs
+++ b/app/views/dashboard.hbs
@@ -1,14 +1,99 @@
 <!DOCTYPE html>
 <html>
- 
+
 <head>
-    <title>Passport with Sequelize</title>
+      <!-- Added link to the jQuery Library -->
+
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <title>Penguin Knight</title>
+    <style>
+        body {
+            background: #000;
+            margin: 0;
+        }
+
+
+
+        #screen {
+            display: block;
+            image-rendering: pixelated;
+            width: 75vw;
+            height: 75vh;
+
+            margin: auto;
+            text-align: left;
+            position: absolute;
+            top: calc(50vh - (
+                        /* height */
+                        75vh / 2));
+            left: calc(50vw - (
+                        /* width */
+                        75vw / 2));
+                       
+        }
+
+        #title {
+            background-image: url("/img/title.jpg");
+            text-align: left;
+            position: absolute;
+            width: 75vw;
+            height: 75vh;
+            top: calc(50vh - (
+                        /* height */
+                        75vh / 2));
+            left: calc(50vw - (
+                        /* width */
+                        75vw / 2));
+            z-index: -1;
+            background-repeat: no-repeat;
+            
+        }
+
+        #bg {
+            z-index: -3;
+            position: absolute;
+            width: 100vw;
+            height: 100vh;
+            top: calc(50vh - (
+                        /* height */
+                        100vh / 2));
+            left: calc(50vw - (
+                        /* width */
+                        100vw / 2));
+            z-index: -2;
+            background-repeat: no-repeat;
+            
+        }
+
+        button {
+          padding: 0px 20px 0px 20px;
+        }
+    </style>
+    
 </head>
- 
+
 <body>
-    <h2>Dashboard</h2>
-    <h5>Hurray! you are logged in.</h5>
- 
+
+  <nav class="navbar navbar-dark bg-dark">
+    <a class="navbar-brand text-white">Penguin Knight</a>
+    <form class="form-inline text-white">
+               <a href="logout">
+            <button type="button" class="btn btn-warning">Sign Out</button></a>
+
+        <button type="button" class="btn btn-warning btn-lg">Hi-Score</button>
+
+    </form>
+  </nav>
+
+    <canvas id="screen" width="256" height="240"></canvas>
+    <canvas id="title" width="1200" height="700">  </canvas>
+    <canvas id="bg" width="1200" height="1000"></canvas>
+
+
+  <script type="module" src="/js/main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
- 
+
 </html>
