--- a/app/views/signin.hbs
+++ b/app/views/signin.hbs
@@ -3,16 +3,47 @@
  
 <head>
     <title></title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
  
 <body>
-    <form id="signin" name="signin" method="post" action="signin">
+
+    
+
+    <div class="row">
+        <div class="col-3"></div>
+
+
+
+
+
+    <form class="col-6" id="signin" name="signin" method="post" action="signin">
+  <div class="form-group">
+    <label for="username">UserName:</label>
+    <input name="username" type="text" class="form-control" placeholder="Username">
+  </div>
+  <div class="form-group">
+    <label for="password">Password:</label>
+    <input name="password" type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+  </div>
+  <button type="submit" value="Sign In" class="btn btn-primary">Submit</button>
+</form>
+
+        <div class="col-3"></div>
+
+    </div>
+
+    {{!-- <form id="signin" name="signin" method="post" action="signin">
         <label for="username">User Name</label>
         <input class="text" name="username" type="text" />
         <label for="password">Password</label>
         <input name="password" type="password" />
         <input class="btn" type="submit" value="Sign In" />
-    </form>
+    </form> --}}
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
  
 </body>
  
