--- a/app/views/dashboard.hbs
+++ b/app/views/dashboard.hbs
@@ -80,10 +80,36 @@
                <a href="logout">
             <button type="button" class="btn btn-warning">Sign Out</button></a>
 
-        <button type="button" class="btn btn-warning btn-lg">Hi-Score</button>
+       <button type="button" class="btn btn-warning btn-lg" data-toggle="modal" data-target="#Hiscore">
+  Hi-Score
+</button>
 
     </form>
   </nav>
+
+
+  <!-- Button trigger modal -->
+
+
+<!-- Modal -->
+<div class="modal fade" id="Hiscore" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Hi-Score</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+      Username: 000
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
 
     <canvas id="screen" width="256" height="240"></canvas>
     <canvas id="title" width="1200" height="700">  </canvas>
