--- a/app/views/index.hbs
+++ b/app/views/index.hbs
@@ -33,7 +33,7 @@
         }
 
         #title {
-            background-image: url("img/title.jpg");
+            background-image: url("/img/title.jpg");
             text-align: left;
             position: absolute;
             width: 75vw;
@@ -69,7 +69,7 @@
           padding: 0px 20px 0px 20px;
         }
     </style>
-    <script type="module" src="/js/main.js"></script>
+
 </head>
 
 <body>
@@ -185,7 +185,7 @@
     <canvas id="bg" width="1200" height="1000"></canvas>
   
 
-
+ <script type="module" src="/js/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
