--- a/app/views/dashboard.hbs
+++ b/app/views/dashboard.hbs
@@ -33,7 +33,7 @@
         }
 
         #title {
-            background-image: url("/img/title.jpg");
+            background-image: url("/img/gameTitle.jpg");
             text-align: left;
             position: absolute;
             width: 75vw;
